Atualizar dados do paciente e home

--- a/app/src/main/res/layout/fragment_splash.xml
+++ b/app/src/main/res/layout/fragment_splash.xml
@@ -10,5 +10,5 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scaleType="fitXY"
-        android:src="@drawable/medicine_cuate"/>
+        android:src="@drawable/ic_medicine_cuate"/>
 </FrameLayout>
